--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ ADMIN_USER_IDS=ADMIN_1_USER_ID,ADMIN_2_USER_ID
 ALLOWED_TELEGRAM_USER_IDS=USER_ID_1,USER_ID_2
 
 # Optional configuration, refer to the README for more details
+# LOG_LEVEL=INFO
 # BUDGET_PERIOD=monthly
 # USER_BUDGETS=*
 # GUEST_BUDGET=100.0
